--- a/Profile Summarization and Scoring.ipynb
+++ b/Profile Summarization and Scoring.ipynb
@@ -2,21 +2,65 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Import Libraries and Models"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-30T16:54:17.072925Z",
-     "start_time": "2020-04-30T16:53:54.564660Z"
+     "end_time": "2020-05-04T05:34:28.442162Z",
+     "start_time": "2020-05-04T05:33:59.476991Z"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/subir/pythonenv/default/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:541: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint8 = np.dtype([(\"qint8\", np.int8, 1)])\n",
+      "/Users/subir/pythonenv/default/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:542: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint8 = np.dtype([(\"quint8\", np.uint8, 1)])\n",
+      "/Users/subir/pythonenv/default/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:543: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint16 = np.dtype([(\"qint16\", np.int16, 1)])\n",
+      "/Users/subir/pythonenv/default/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:544: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_quint16 = np.dtype([(\"quint16\", np.uint16, 1)])\n",
+      "/Users/subir/pythonenv/default/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:545: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  _np_qint32 = np.dtype([(\"qint32\", np.int32, 1)])\n",
+      "/Users/subir/pythonenv/default/lib/python3.7/site-packages/tensorboard/compat/tensorflow_stub/dtypes.py:550: FutureWarning: Passing (type, 1) or '1type' as a synonym of type is deprecated; in a future version of numpy, it will be understood as (type, (1,)) / '(1,)type'.\n",
+      "  np_resource = np.dtype([(\"resource\", np.ubyte, 1)])\n",
+      "2020-05-04 11:04:11 INFO: Loading these models for language: en (English):\n",
+      "=========================\n",
+      "| Processor | Package   |\n",
+      "-------------------------\n",
+      "| tokenize  | ewt       |\n",
+      "| pos       | ewt       |\n",
+      "| lemma     | ewt       |\n",
+      "| depparse  | ewt       |\n",
+      "| ner       | ontonotes |\n",
+      "=========================\n",
+      "\n",
+      "2020-05-04 11:04:11 INFO: Use device: cpu\n",
+      "2020-05-04 11:04:11 INFO: Loading: tokenize\n",
+      "2020-05-04 11:04:11 INFO: Loading: pos\n",
+      "2020-05-04 11:04:12 INFO: Loading: lemma\n",
+      "2020-05-04 11:04:12 INFO: Loading: depparse\n",
+      "2020-05-04 11:04:14 INFO: Loading: ner\n",
+      "2020-05-04 11:04:14 INFO: Done loading processors!\n"
+     ]
+    }
+   ],
    "source": [
     "from spacy_stanza import StanzaLanguage\n",
     "import stanza\n",
@@ -42,7 +86,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Defining Client Profile Summary from Documentum"
    ]
@@ -52,8 +100,11 @@
    "execution_count": 2,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-30T16:54:17.125643Z",
-     "start_time": "2020-04-30T16:54:17.075468Z"
+     "end_time": "2020-05-04T05:34:28.581693Z",
+     "start_time": "2020-05-04T05:34:28.453395Z"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -69,18 +120,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Source URL list to crawl"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 3,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-30T20:05:08.698402Z",
-     "start_time": "2020-04-30T20:05:08.694914Z"
+     "end_time": "2020-05-04T05:34:28.596933Z",
+     "start_time": "2020-05-04T05:34:28.590745Z"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -95,18 +153,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### HTML Parsing and Text Cleaning"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 4,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-30T20:05:09.766850Z",
-     "start_time": "2020-04-30T20:05:09.753307Z"
+     "end_time": "2020-05-04T05:34:28.620429Z",
+     "start_time": "2020-05-04T05:34:28.601845Z"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -161,18 +226,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Creating Corpus of Information from WEB"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 5,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-30T20:05:15.203879Z",
-     "start_time": "2020-04-30T20:05:15.198839Z"
+     "end_time": "2020-05-04T05:34:28.634470Z",
+     "start_time": "2020-05-04T05:34:28.624199Z"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -190,11 +262,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 6,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-30T20:05:24.382852Z",
-     "start_time": "2020-04-30T20:05:15.782463Z"
+     "end_time": "2020-05-04T05:34:39.922604Z",
+     "start_time": "2020-05-04T05:34:28.640109Z"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -204,18 +279,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### BERT based Text Summarization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 7,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-30T20:04:16.565106Z",
-     "start_time": "2020-04-30T20:04:00.163568Z"
+     "end_time": "2020-05-04T05:34:58.685063Z",
+     "start_time": "2020-05-04T05:34:39.937066Z"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "outputs": [],
@@ -225,11 +307,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 12,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-30T20:04:21.575198Z",
-     "start_time": "2020-04-30T20:04:16.613950Z"
+     "end_time": "2020-05-04T05:39:03.494095Z",
+     "start_time": "2020-05-04T05:38:52.518288Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -240,14 +322,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Unique Entity Number: 201309826H FICOFI PARTNERS HOLDING PTE. The company was registered / incorporated on 12 April 2013 (Friday), 7 years ago The address of this company registered office is 25 INTERNATIONAL BUSINESS PARK #03-01/02 GERMAN CENTRE SINGAPORE 609916 The company has 7 officers / owners / shareholders. The company secondary activity is MANAGEMENT CONSULTANCY SERVICES N.E.C.. Ficofi Partners Holding Pte. It operates in the Management of Companies and Enterprises sector. It was incorporated on April 12, 2013. Ltd. report to view the information. EMIS company profiles are part of a larger information service which combines company, industry and country data and analysis for over 145 emerging markets. Marshall Cavendish Business Information Pte Ltd. All Rights Reserved. The entity status is Live Company. Each entity is registered with unique entity number (UEN), entity name, entity time, UEN issue date, location, etc.\n",
+      "Unique Entity Number: 201309826H FICOFI PARTNERS HOLDING PTE. The company was registered / incorporated on 12 April 2013 (Friday), 7 years ago The address of this company registered office is 25 INTERNATIONAL BUSINESS PARK #03-01/02 GERMAN CENTRE SINGAPORE 609916 The company has 7 officers / owners / shareholders. The company secondary activity is MANAGEMENT CONSULTANCY SERVICES N.E.C.. Ficofi Partners Holding Pte. Ltd. is an enterprise located in Singapore, with the main office in Singapore. It was incorporated on April 12, 2013. Ltd. report to view the information. EMIS company profiles are part of a larger information service which combines company, industry and country data and analysis for over 145 emerging markets. Marshall Cavendish Business Information Pte Ltd. All Rights Reserved. The entity status is Live Company. Please comment or provide details below to improve the information on .\n",
       "\n",
-      " Polarity of Article: 0.08376623376623378\n"
+      " Polarity of Article: 0.054004329004329006\n"
      ]
     }
    ],
    "source": [
-    "result = model(corpus, min_length=30, ratio=0.5, max_length=len(corpus))\n",
+    "result = model(corpus, min_length=30, algorithm='gmm',ratio=0.5, max_length=len(corpus))\n",
     "full = ''.join(result)\n",
     "print(full)\n",
     "testimonial = TextBlob(full)\n",
@@ -256,18 +338,25 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
    "source": [
     "### Similarity Score Calculation using spaCy"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 17,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-04-30T20:04:21.780267Z",
-     "start_time": "2020-04-30T20:04:21.604184Z"
+     "end_time": "2020-05-04T11:17:37.488128Z",
+     "start_time": "2020-05-04T11:17:37.263185Z"
+    },
+    "slideshow": {
+     "slide_type": "slide"
     }
    },
    "outputs": [
@@ -275,14 +364,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The Similarity Score of Sumaarized Text is: %d 0.930997122566286\n"
+      "The Similarity Score of Summarized Text is:  93.13271240399268\n"
      ]
     }
    ],
    "source": [
     "extraction = spacy_nlp(full)\n",
     "similarity_score = extraction.similarity(kyc_doc)\n",
-    "print('The Similarity Score of Sumaarized Text is: %d', similarity_score)"
+    "print('The Similarity Score of Summarized Text is: ', similarity_score*100)"
    ]
   },
   {
@@ -294,6 +383,7 @@
   }
  ],
  "metadata": {
+  "celltoolbar": "Slideshow",
   "kernelspec": {
    "display_name": "Python 3.7.4 64-bit",
    "language": "python",
