updated ppt file

--- a/Profile Summarization and Scoring.ipynb
+++ b/Profile Summarization and Scoring.ipynb
@@ -283,11 +283,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 128,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-05T11:31:20.029088Z",
-     "start_time": "2020-05-05T11:31:20.014896Z"
+     "end_time": "2020-05-05T18:17:36.634480Z",
+     "start_time": "2020-05-05T18:17:36.615617Z"
     }
    },
    "outputs": [
@@ -297,7 +297,7 @@
        "'Registration No. / Unique Entity Number: 201309826H FICOFI PARTNERS HOLDING PTE. LTD. (the \"Company\") The Company is a PRIVATE COMPANY LIMITED BY SHARES and it\\'s current status is Live Company. The company was registered / incorporated on 12 April 2013 (Friday), 7 years ago The address of this company registered office is 25 INTERNATIONAL BUSINESS PARK #03-01/02 GERMAN CENTRE SINGAPORE 609916 The company has 7 officers / owners / shareholders. The company principal activity is OTHER HOLDING COMPANIES. The company secondary activity is MANAGEMENT CONSULTANCY SERVICES N.E.C.. Ficofi Partners Holding Pte. Ltd. is an enterprise located in Singapore, with the main office in Singapore. It operates in the Management of Companies and Enterprises sector. It was incorporated on April 12, 2013. Headquarters 25 International Business Park #03-01/02 German Centre Singapore 609916 Singapore; Singapore; Postal Code: 609916 Contact Details: Purchase the Ficofi Partners Holding Pte. Ltd. report to view the information. EMIS company profiles are part of a larger information service which combines company, industry and country data and analysis for over 145 emerging markets. To view more information, Request a demonstration of the EMIS service FICOFI PARTNERS HOLDING PTE LTD 25 International Business Park #03-01/02 German Centre Singapore 609916 Copyright © 2020. Marshall Cavendish Business Information Pte Ltd. All Rights Reserved. FICOFI PARTNERS HOLDING PTE. LTD. (UEN ID 201309826H) is a corporate entity registered with Accounting and Corporate Regulatory Authority. The UEN issue date is April 13, 2013. The entity status is Live Company. Please comment or provide details below to improve the information on . This dataset includes 1.5 million corporate entities registered with Accounting and Corporate Regulatory Authority (ACRA), Singapore. Each entity is registered with unique entity number (UEN), entity name, entity time, UEN issue date, location, etc. HOT LEADS / LISTS HR Managers eMail Lists HR Managers Database HR-VP, Directors Database Finance Managers eMail Lists Finance Managers Database IT Managers eMail Lists IT Managers Database CIO / CTO Database CFO / Director - Finance eMail Lists CFO / Director - Finance Database Sales Managers eMail Lists Sales Managers Database Sales-VP, Director Database CEO, President, MD eMail Lists Directors (Share Holding) eMail Lists Marketing Managers eMail Lists Marketing Managers Database Marketing-VP, Director Database CEO, President, MD Database Directors (Share Holding) Database Home | Enquiry | FAQ | Contact Copyright © 2020 Singapore Contacts. All Rights Reserved.'"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -336,11 +336,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 129,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-05T11:31:46.840030Z",
-     "start_time": "2020-05-05T11:31:38.253578Z"
+     "end_time": "2020-05-05T18:17:47.220275Z",
+     "start_time": "2020-05-05T18:17:39.840211Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -596,7 +596,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-05T17:11:13.001568Z",
+     "start_time": "2020-05-05T17:11:12.982662Z"
+    }
+   },
    "outputs": [],
    "source": []
   },
