Update Profile Summarization and Scoring- demo.ipynb

--- a/Profile Summarization and Scoring- demo.ipynb
+++ b/Profile Summarization and Scoring- demo.ipynb
@@ -323,7 +323,8 @@
     "ExecuteTime": {
      "end_time": "2020-05-15T10:40:50.316103Z",
      "start_time": "2020-05-15T10:40:50.300550Z"
-    }
+    },
+    "scrolled": true
    },
    "outputs": [
     {
@@ -342,6 +343,31 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2020-05-15T11:39:15.668771Z",
+     "start_time": "2020-05-15T11:39:15.662919Z"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "36.002252252252255"
+      ]
+     },
+     "execution_count": 80,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(corpus)/len(fromkyc)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
@@ -354,11 +380,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 74,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-15T10:41:08.492928Z",
-     "start_time": "2020-05-15T10:40:50.345445Z"
+     "end_time": "2020-05-15T11:36:13.497365Z",
+     "start_time": "2020-05-15T11:35:59.426191Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -371,11 +397,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 75,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-15T10:41:28.454218Z",
-     "start_time": "2020-05-15T10:41:08.588100Z"
+     "end_time": "2020-05-15T11:36:13.573066Z",
+     "start_time": "2020-05-15T11:36:13.550381Z"
     },
     "slideshow": {
      "slide_type": "slide"
@@ -386,9 +412,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SHV is a decentralised company. This decentralisation provides an excellent opportunity for individual development. SHV's most important values are integrity and loyalty. Good news may travel slowly, bad news should travel quickly. By 1911, the younger Fentener van Vlissingen had been named the company's director. SHV's fuel interests soon turned toward a new type, however. This process began in earnest at the end of the 1960s. SHV split up Geveke & Groenpol into two operations. Instead, SHV had begun building a number of other growing operations. SHV continued to build up its stake in Primagaz. At the same time, it sought other acquisition targets. Formed in 1935, that company spread throughout the United Kingdom by the outbreak World War II. That bid was rejected by Calor Gas, however. Two years later, SHV acquired full control of Primagaz as well. Nonetheless, SHV remained one of the Netherlands' largest--and most flexible--holding companies. Principal Subsidiaries: Bizimgaz Ticaret Ve Sanayi A.S. (Turkey); Butan Plin d.d. ( Hungary); Primagaz Nederland B.V.; Primaplyn Spol. Your input will affect cover photo selection, along with input from other users. Would you like to suggest this photo as the cover photo for this article?\n",
       "\n",
-      " Polarity of Article: 0.1777935606060606\n"
+      "\n",
+      " Polarity of Article: 0.0\n"
      ]
     }
    ],
