completed all changes to namespace

--- a/Profile Summarization and Scoring- demo.ipynb
+++ b/Profile Summarization and Scoring- demo.ipynb
@@ -201,9 +201,9 @@
    "source": [
     "def text_cleaning(raw_text):\n",
     "    raw_text_list = raw_text.split('\\n')\n",
-    "#     raw_text_list = [\n",
-    "#         token for token in raw_text_list if token not in stop_words\n",
-    "#     ]\n",
+    "    #     raw_text_list = [\n",
+    "    #         token for token in raw_text_list if token not in stop_words\n",
+    "    #     ]\n",
     "    clean_sent_list = [\n",
     "        re.sub('[^A-Za-z0-9]+\\.-/', '', token) for token in raw_text_list\n",
     "        if bool(token)\n",
@@ -344,27 +344,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 82,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2020-05-15T11:39:15.668771Z",
-     "start_time": "2020-05-15T11:39:15.662919Z"
+     "end_time": "2020-05-15T11:39:52.585929Z",
+     "start_time": "2020-05-15T11:39:52.578707Z"
     }
    },
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "36.002252252252255"
+       "18.0"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "len(corpus)/len(fromkyc)"
+    "0.5*np.floor(len(corpus)/len(fromkyc))"
    ]
   },
   {
@@ -419,7 +419,11 @@
     }
    ],
    "source": [
-    "result = model(corpus, min_length=10, max_length=100,algorithm='gmm',ratio=0.5)\n",
+    "result = model(corpus,\n",
+    "               min_length=10,\n",
+    "               max_length=100,\n",
+    "               algorithm='gmm',\n",
+    "               ratio=0.5)\n",
     "full = ''.join(result)\n",
     "print(full)\n",
     "testimonial = TextBlob(full)\n",
@@ -461,7 +465,7 @@
    "source": [
     "extraction = spacy_nlp(full)\n",
     "similarity_score = extraction.similarity(kyc_doc)\n",
-    "print('The Similarity Score of Summarized Text is: ', similarity_score*100)"
+    "print('The Similarity Score of Summarized Text is: ', similarity_score * 100)"
    ]
   },
   {
